--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,33 +26,14 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="hello-world" class="anchor" href="#hello-world" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello World</h3>
-
-<p>测试</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<h3>
-<a id="这是里小标题" class="anchor" href="#%E8%BF%99%E6%98%AF%E9%87%8C%E5%B0%8F%E6%A0%87%E9%A2%98" aria-hidden="true"><span class="octicon octicon-link"></span></a>这是里小标题</h3>
-
-<p>这里是正文</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p><a href="https://blog.i1602.com/">https://blog.i1602.com/</a>
-<a href="mailto:zhaolei254@gmail.com">zhaolei254@gmail.com</a></p>
-      </section>
+  {{ content }}
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
+	<p><a href="https://blog.i1602.com/">https://blog.i1602.com/</a>
+	<a href="mailto:zhaolei254@gmail.com">zhaolei254@gmail.com</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
