--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="zhaolei个人笔记 : 笔记 zhaolei">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/stylesheet.css">
 
     <title>zhaolei个人笔记</title>
   </head>
@@ -17,7 +17,6 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/zhaolei">View on GitHub</a>
-
           <h1 id="project_title">zhaolei个人笔记</h1>
           <h2 id="project_tagline">笔记 zhaolei</h2>
 
