--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,3 +35,13 @@ layout: default
     </div>
   </div>
 </div>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?ba95ea9dcc478479b6b2102e4e0431a2";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
